k8s-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-node-server
  name: k8s-node-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: k8s-node-server
  type: NodePort
